--- a/计算机单位换算.md
+++ b/计算机单位换算.md
@@ -11,3 +11,13 @@
 >> 一个英文字母要8个bit才能表示,一个汉字要16个bit来表示.8个bit才是一个字节.
 
 > 1byte=8bit,两者换算是1：8的关系.
+
+## KB MB GB TB PB EB ZB 
+
+换算进制为1024
+
+> 1KB=1024B  1MB=1024KB   1GB=1024MB  1TB=1024GB   1PB=1024TB  1EB=1024PB  1ZB=1024EB
+
+## 换算实践 1PB=?MB
+
+> 1PB=1024X1024X1024=1,073,741,824MB
