--- a/云存储.md
+++ b/云存储.md
@@ -28,3 +28,119 @@
    ## 云存储系统架构
 
    1. 从底层到上依次为：数据存储层、数据管理层、数据服务层、用户访问层
+
+![1545875998192](/tmp/1545875998192.png)
+
+## 磁盘驱动器接口
+
+磁盘接口对整体性能有直接影响
+
+存储设备主要分为三种：高端、中端、近线
+
+高端：FC（光纤通道）磁盘
+
+> 应用于关键数据的大容量实时存储
+
+中端：SCSI、SAS（串行连接SCSI）
+
+> 商业级的关键数据的大容量实时存储
+
+近线：SATA磁盘存储
+
+> 非关键数据的大容量存储，目的是替代以前的磁带备份
+
+## 存储架构
+
+###　概览
+
+DAS直连存储
+
+> 直接将存储设备通过总线适配器和电缆（SCSI、FC）直接连接到服务器的架构
+>
+> DAS依赖于服务器，本身不带有存储操作系统
+>
+> 数据和操作系统未分离
+>
+> 只能被一台计算机连接，无法实现共享
+
+NAS附网存储
+
+> 以数据为中心的数据存储模式
+>
+> 不同于das附着于固定的服务器，它完全独立于网络中的主服务器，并且允许客户机于存储设备间直接进行数据访问
+>
+> NAS是可以直接连接到网络上向用户提供文件级服务的存储设备
+>
+> 一个NAS包括：处理器、内存、网卡、文件服务管理模块、用于存储的硬盘驱动器
+>
+> > 以文件I/O方式进行数据传输，基于现有的LAN构建，按照TCP/IP等协议通信
+
+SAN存储区域网络
+
+> 指的是通过一个专用的网络把存储设备和TCP/IP局域网上的服务器集群相连接
+>
+> SAN独立于传统局域网，通过网关设备和局域网相连接，传输速率极高，并且可以跨不同存储设备和服务器以及不同网络与不同平台
+>
+> > SAN存储架构以FC光纤网络位基础，实现存储设备共享，突破距离和容量限制
+>
+> 数据传输方式为块传输，基于专用的光纤通道网络构建
+
+DFS分布式文件系统
+
+> 文件系统从宏观可分为本地文件系统（LFS）和分布式文件系统（DFS）
+
+##　数据保护技术
+
+1. 备份技术
+
+   > 分为离线备份与在线备份
+
+2. 镜像技术
+
+3. 快照技术
+
+4. 持续数据保护
+
+   > 捕捉一切文件级或数据块级别的数据写，改动，可以恢复到任意时间点。
+
+##　数据备份
+
+作为存储系统中最重要的应用之一，是保护数据的关键手段
+
+### 备份策略
+
+> 完全备份
+>
+> > 拷贝整个文件系统到备份设备
+> >
+> > > 缺点：存在大量重复数据、数据量大、备份时间长
+>
+> 增量备份
+>
+> > 在完全备份的基础上仅仅拷贝新生或者修改的文件
+> >
+> > > 不存在重复数据、节省空间，但恢复数据会较麻烦
+>
+> 差量备份
+>
+> > 拷贝所有新数据，新数据指的是“上一次完全备份后产生或更新的”
+> >
+> > > 与完全备份比备份时间短并节省空间
+> > >
+> > > 与增量备份比，数据恢复方便
+>
+> 增量与差量区别
+>
+> 增量备份记录上一次完全备份或增量备份以来的更新数据
+>
+> 差量备份记录上一次完全备份以来的所有更新数据
+
+## 硬盘
+
+磁盘片表面称为盘面。
+
+磁盘片表面上以磁盘片中心为圆心，不同半径的同心圆称为磁道。
+
+不同磁盘片相同半径的磁道所组成的圆柱称为柱面。
+
+磁盘片被分成许多扇形的区域，每个区域叫一个扇区。
